--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-   display: center;
+   display: flex-cener;
    align-items: center; 
    justify-content: center;
    min-height: 100vh;
@@ -10,9 +10,12 @@ body {
    font-size: 18px;
    margin: 1em;
    border: whitesmoke dashed 3px;
-   background-repeat: none;
-   background-position: absolute;
-   
+   /* background-image: url(https://totemsurftribe.files.wordpress.com/2024/03/804695.jpg?resize=438%2C438); opacity 1; */
+   /* background-repeat: none;
+   background-position: center;
+   bakground-height: 100%; */
+  
+
 }
 
 .container {
@@ -50,6 +53,7 @@ h3 {
 h1 {
   text-transform: uppercase;
   font-size: 4em;
+  font-weight: 600;
   
 }
 
