update guess count function to work correctly

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-   display: flex-cener;
+   display: flex-center;
    align-items: center; 
    justify-content: center;
    min-height: 100vh;
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  clear: 0;
+  clear: p;
   width: 100%;
   margin: 0 auto;
 }
