--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,19 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  max-width: 100vh;
   font-family: "Redressed", cursive;
   background-color: rgb(240, 217, 245);
   height: 100%;
   text-align: center;
   font-size: 18px;
   margin: 1em;
-  border: whitesmoke dashed 3px;
+  border: rgb(124, 123, 123) dashed .5px;
+  padding: 0 1em;
 }
 
 .container {
-  clear: p;
+  clear: both;
   width: 100%;
   margin: 0 auto;
 }
@@ -24,17 +26,23 @@ body {
 
 
 .letters {
-  display: flex-center;
+  display: flex;
+  justify-content: center; 
 }
 
 canvas {
-  color: white;
+  color: rgb(240, 217, 245);
   border: black dashed 2px;
-  padding: 50px;
+  padding: 2vw; 
   background-image: url(https://totemsurftribe.files.wordpress.com/2024/02/img_1983-2.jpg?resize=438%2C438);
   background-position: center;
-  background-position: justify;
+  width: 80%;
+  max-width: 400px; 
+  margin: auto; 
 }
+
+
+
 
 h1,
 h2,
@@ -100,6 +108,19 @@ button#try {
     border: solid 1px white;
     color: rgb(242, 241, 241);
   }
+}
+
+button#reset.rainbow-gradient {
+  background: linear-gradient(to right, 
+    rgb(249, 161, 249),
+    indigo,
+    rgb(158, 226, 241),
+    rgb(142, 240, 142),
+    yellow,
+    orange,
+    red
+  );
+  color: rgb(0, 0, 0); 
 }
 
 
